Fixed height issue in the testimonials that occured on safari.

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,6 @@
   -webkit-justify-content: space-around;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  height: 100%;
   padding: 60px; }
   #testimonial #testWrapper {
     display: -webkit-box;
