--- a/scss/_skills.scss
+++ b/scss/_skills.scss
@@ -49,7 +49,6 @@
   background-color: #f5f6e8;
   display: flex;
   justify-content: space-around;
-  height: 100%;
   padding: 60px;
   #testWrapper {
     display: flex;
